@@ -810,17 +810,25 @@ static int attack_ob_simple (object *op, object *hitter, int base_dam,
             if (hitter->current_weapon->anim_suffix)
             {
                 int anim;
-                sprintf(buf,"%s_%s", animations[hitter->animation_id].name,
-                    hitter->current_weapon->anim_suffix);
+                object* head;
+                if (hitter->head != NULL)
+                    head = hitter->head;
+                else
+                    head = hitter;
+                sprintf(buf,"%s_%s", animations[head->animation_id].name,
+                    head->current_weapon->anim_suffix);
                 anim = find_animation(buf);
                 if (anim)
                 {
-                    hitter->temp_animation_id = anim;
-                    hitter->temp_anim_speed = animations[anim].num_animations/animations[anim].facings;
-                    hitter->temp_last_anim = 0;
-                    hitter->last_anim = 0;
-                    hitter->state = 0;
-                    update_object(hitter, UP_OBJ_FACE);
+                    for(;head!=NULL;head=head->more)
+                    {
+                        head->temp_animation_id = anim;
+                        head->temp_anim_speed = animations[anim].num_animations/animations[anim].facings;
+                        head->temp_last_anim = 0;
+                        head->last_anim = 0;
+                        head->state = 0;
+                        update_object(head, UP_OBJ_FACE);
+                    }
                 }
             }
         }
